apps/litomi/redis/service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app.kubernetes.io/name: valkey
    app.kubernetes.io/instance: redis
  ports:
    - name: redis
      port: 6379
