apps/litomi/redis/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-ingress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: valkey
      app.kubernetes.io/instance: redis
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: valkey
              app.kubernetes.io/instance: redis
      ports:
        - port: 6379
    - from:
        - podSelector:
            matchLabels:
              app: litomi-web
        - podSelector:
            matchLabels:
              app: litomi-backend
      ports:
        - port: 6379
